Spark 4.0 integration tests working